# pl-key-value-sqlite-db

./: .gitignore  README.md  pyproject.toml
src/pl_key_value_sqlite_db/: constants.py  create_key.py  create_key_value_key_unsafe.py  create_key_value_table_if_not_exists.py  delete_key_value.py  delete_key_value_key_unsafe.py  execute_key_value_sql.py  execute_sql.py  get_all_key_value_keys.py  key_types.py  key_value_migration.py  load_bool.py  load_date.py  load_datetime.py  load_int.py  load_key_value_unsafe.py  load_str.py  load_value_untyped.py  save_bool.py  save_date.py  save_datetime.py  save_int.py  save_key_value_value_unsafe.py  save_str.py  save_value_untyped.py  settings.py
src/pl_key_value_sqlite_db/testing/: key_value_sqlite_fake.py  settings_fake.py
tests/: conftest.py  create_key_test.py  create_key_value_key_unsafe_test.py  create_key_value_table_if_not_exists_test.py  delete_key_value_key_unsafe_test.py  delete_key_value_test.py  execute_key_value_sql_test.py  execute_sql_test.py  get_all_key_value_keys_test.py  key_types_test.py  key_value_migration_test.py  load_bool_test.py  load_date_test.py  load_datetime_test.py  load_int_test.py  load_key_value_unsafe_test.py  load_str_test.py  load_value_untyped_test.py  save_bool_test.py  save_date_test.py  save_datetime_test.py  save_key_value_value_unsafe_test.py  save_str_test.py  save_value_untyped_test.py
